PRTidy for FlowRouteViewHandler